# LOOK-RUNNING

./: CMakeLists.txt  README.md  main.cpp
headers/: common.h  device.h  model.h  obj.h  shader.h  texture.h
shaders/: triangleFragment.glsl  triangleVertex.glsl
sources/: device.cpp  shader.cpp
